--- a/FileBoxApp/Components/_Imports.razor
+++ b/FileBoxApp/Components/_Imports.razor
@@ -7,3 +7,10 @@
 @using Microsoft.JSInterop
 @using FileBoxApp
 @using FileBoxApp.Components
+
+@using Blazored.LocalStorage;
+
+@using DatabaseConnector.Services;
+
+@using FileBoxApp.Services;
+@using FileBoxApp.Models;
