--- a/FileBoxApp/Components/Layout/MainLayout.razor.css
+++ b/FileBoxApp/Components/Layout/MainLayout.razor.css
@@ -1,15 +1,18 @@
 .page {
-    position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    height: 100vh;
 }
 
 main {
     flex: 1;
+    overflow-y: auto;
+    padding-bottom: 15px;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: black;
+    width: auto;
 }
 
 .top-row {
@@ -36,42 +39,15 @@ main {
             text-overflow: ellipsis;
         }
 
-@media (max-width: 640.98px) {
-    .top-row {
-        justify-content: space-between;
+@media (max-width: 600px)
+{
+
+    .page{
+        flex-direction: column;
     }
 
-        .top-row ::deep a, .top-row ::deep .btn-link {
-            margin-left: 0;
-        }
-}
-
-@media (min-width: 641px) {
-    .page {
+    .sidebar{
         flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-        .top-row.auth ::deep a:first-child {
-            flex: 1;
-            text-align: right;
-            width: 0;
-        }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
+        justify-content: center;
     }
 }
