FileBox Made location of sqlite database be passed into startup Added NoOfFiles for Tags
Filebox.Shared
Added Clone to tag model

FileBoxApp
Added Tag Page
Added Modal Component

--- a/FileBoxApp/Components/_Imports.razor
+++ b/FileBoxApp/Components/_Imports.razor
@@ -11,6 +11,9 @@
 @using Blazored.LocalStorage;
 
 @using DatabaseConnector.Services;
+@using FileBox.Interfaces;
+@using FileBox.Shared.Models;
 
 @using FileBoxApp.Services;
 @using FileBoxApp.Models;
+@using FileBoxApp.Components.Components;
