--- a/FileBoxApp/Components/Pages/Home.razor.css
+++ b/FileBoxApp/Components/Pages/Home.razor.css
@@ -1,9 +1,13 @@
 ﻿
+.top-container :last-child {
+	position: absolute;
+	right: 20px;
+}
+
 .search-container {
 	position: sticky;
 	top: 5px;
 	background-color: white;
-
 	padding: 10px;
 }
 
