--- a/FileBoxApp/Components/Pages/Home.razor.css
+++ b/FileBoxApp/Components/Pages/Home.razor.css
@@ -1,7 +1,7 @@
 ﻿
 .top-container :last-child {
-	position: absolute;
-	right: 20px;
+	margin-left: auto;
+	margin-right: 0;
 }
 
 .search-container {
@@ -25,4 +25,12 @@
 
 .recent-accessed-item {
 	width: 20%;
+}
+
+
+@media (max-width: 600px)
+{
+	.last-accessed{
+		display: none;
+	}
 }
