Added MetaDataService for getting metadata for a file.
Added nuget package MetadataExtractor.

--- a/FileBoxApp/Components/Pages/ViewDocument.razor
+++ b/FileBoxApp/Components/Pages/ViewDocument.razor
@@ -67,6 +67,10 @@
 		<div>
 			<InputText class="form-control" @bind-value="@Psuedoname.Value" @bind-value:after="UpatePsuedoname" placeholder="Psuedoname"></InputText>
 		</div>
+		<hr />
+		<div>
+			TODO
+		</div>
 	</Body>
 	<Footer>
 		<div>
